force-app/main/default/objects/UID__c/UID__c.object-meta.xml
<CustomObject>
    <description>Unique Identifiers, RFID Tags from Track &amp; Trace</description>
    <label>UID</label>
    <nameField>
        <label>UID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>