force-app/main/default/objects/UID__c/fields/Available_Qty__c.field-meta.xml
<CustomField>
    <fullName>Available_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Exclude Location:  CannaWaste, Delivered, Packaged, Quarantine, Test Sampled, Transferred</inlineHelpText>
    <label>Available Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>