force-app/main/default/objects/UID__c/fields/Available_Qty_in_METRC__c.field-meta.xml
<CustomField>
    <fullName>Available_Qty_in_METRC__c</fullName>
    <label>Available Qty in METRC</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>