force-app/main/default/objects/UID__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>UIDs</relationshipLabel>
    <relationshipName>UIDs</relationshipName>
    <type>Lookup</type>
</CustomField>