force-app/main/default/objects/UID__c/fields/Finished_Date__c.field-meta.xml
<CustomField>
    <fullName>Finished_Date__c</fullName>
    <inlineHelpText>Package finished date in Metrc.</inlineHelpText>
    <label>Finished Date</label>
    <type>Date</type>
</CustomField>