force-app/main/default/objects/UID__c/fields/IRR_UID__c.field-meta.xml
<CustomField>
    <fullName>IRR_UID__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox for Irrational Raccoon Source UID</inlineHelpText>
    <label>IRR UID</label>
    <type>Checkbox</type>
</CustomField>