force-app/main/default/objects/UID__c/fields/Metrc__c.field-meta.xml
<CustomField>
    <fullName>Metrc__c</fullName>
    <inlineHelpText>Metrc Manifest # for In-Transit</inlineHelpText>
    <label>Metrc #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>