force-app/main/default/objects/UID__c/fields/Metrc_Category__c.field-meta.xml
<CustomField>
    <fullName>Metrc_Category__c</fullName>
    <label>Metrc Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>