force-app/main/default/objects/UID__c/fields/Metrc_Item__c.field-meta.xml
<CustomField>
    <fullName>Metrc_Item__c</fullName>
    <label>Metrc Item</label>
    <length>200</length>
    <type>Text</type>
</CustomField>