force-app/main/default/objects/UID__c/fields/METRC_Lab_Status__c.field-meta.xml
<CustomField>
    <fullName>METRC_Lab_Status__c</fullName>
    <label>METRC Lab Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotSubmitted</fullName>
                <default>true</default>
                <label>NotSubmitted</label>
            </value>
            <value>
                <fullName>SubmittedForTesting</fullName>
            </value>
            <value>
                <fullName>TestPassed</fullName>
            </value>
            <value>
                <fullName>TestFailed</fullName>
            </value>
            <value>
                <fullName>TestingInProgress</fullName>
            </value>
            <value>
                <fullName>NotRequired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>