force-app/main/default/objects/UID__c/fields/METRC_Status__c.field-meta.xml
<CustomField>
    <fullName>METRC_Status__c</fullName>
    <label>METRC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unfinished</fullName>
                <default>true</default>
                <label>Unfinished</label>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>