force-app/main/default/objects/UID__c/fields/METRC_Sync_status__c.field-meta.xml
<CustomField>
    <fullName>METRC_Sync_status__c</fullName>
    <label>METRC Sync status</label>
    <type>TextArea</type>
</CustomField>