force-app/main/default/objects/UID__c/fields/Metrc_UOM__c.field-meta.xml
<CustomField>
    <fullName>Metrc_UOM__c</fullName>
    <label>Metrc UOM</label>
    <length>200</length>
    <type>Text</type>
</CustomField>