force-app/main/default/objects/UID__c/fields/Packaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Packaged_Date__c</fullName>
    <label>Packaged Date</label>
    <type>Date</type>
</CustomField>