force-app/main/default/objects/UID__c/fields/Previous_UID__c.field-meta.xml
<CustomField>
    <fullName>Previous_UID__c</fullName>
    <label>Previous UID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>