force-app/main/default/objects/UID__c/fields/Voided__c.field-meta.xml
<CustomField>
    <fullName>Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voided</label>
    <type>Checkbox</type>
</CustomField>