force-app/main/default/objects/UID__c/validationRules/Disallow_Duplicate_UID.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_Duplicate_UID</fullName>
    <active>false</active>
    <errorConditionFormula>Name = Name</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>No Duplicate UIDs Allowed!</errorMessage>
</ValidationRule>