force-app/main/default/objects/UID__c/validationRules/UID_Character_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>UID_Character_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Name) &lt;&gt; 24  &amp;&amp; Name &lt;&gt; &apos;N/A&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Insufficient UID Character. Please check and reenter.</errorMessage>
</ValidationRule>