force-app/main/default/objects/UID__c/listViews/X1_Available_UIDs.listView-meta.xml
<ListView>
    <fullName>X1_Available_UIDs</fullName>
    <columns>IRR_UID__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>In_Use__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Use__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>IRR_UID__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>TestUIDforITDEV-1</value>
    </filters>
    <label>1. Available UIDs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>