force-app/main/default/objects/UID__c/listViews/X2_Used_IRR_UIDs.listView-meta.xml
<ListView>
    <fullName>X2_Used_IRR_UIDs</fullName>
    <columns>IRR_UID__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>In_Use__c</columns>
    <columns>METRC_Lab_Status__c</columns>
    <columns>METRC_Status__c</columns>
    <columns>METRC_Sync_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Use__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IRR_UID__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>2. Used IRR UIDs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>