force-app/main/default/objects/UID__c/listViews/X3_Used_UIDs.listView-meta.xml
<ListView>
    <fullName>X3_Used_UIDs</fullName>
    <columns>IRR_UID__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>In_Use__c</columns>
    <columns>Batch_ID__c</columns>
    <columns>Packaged_Date__c</columns>
    <columns>Previous_UID__c</columns>
    <columns>Received_Qty__c</columns>
    <columns>Available_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Use__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>3. Used UIDs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>