force-app/main/default/objects/UID__c/listViews/X5_All_Foreign_UIDs.listView-meta.xml
<ListView>
    <fullName>X5_All_Foreign_UIDs</fullName>
    <columns>IRR_UID__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>In_Use__c</columns>
    <columns>Batch_ID__c</columns>
    <columns>Packaged_Date__c</columns>
    <columns>Previous_UID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IRR_UID__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>5. All Foreign UIDs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>